samples/_failures_safe/1761489329_ca3b41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd3bac38.c: In function ‘main’:
./samples/SAFE/__tmp_dd3bac38.c:145:19: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  145 |     print_matrix(&mat
      |                   ^~~
      |                   mat2
./samples/SAFE/__tmp_dd3bac38.c:145:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dd3bac38.c:145:22: error: expected ‘)’ at end of input
  145 |     print_matrix(&mat
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_dd3bac38.c:145:5: error: expected declaration or statement at end of input
  145 |     print_matrix(&mat
      |     ^~~~~~~~~~~~
